Add content in the html file

--- a/index.html
+++ b/index.html
@@ -8,6 +8,32 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
+  <div class="grid">
+    <div class="unit">
+      <figure>
+        <img class="img-flex" src="images/diplodocus.jpg">
+        <figcaption>Diplodocus</figcaption>
+      </figure>
+    </div>
+    <div class="unit">
+      <figure>
+        <img class="img-flex" src="images/hadrosaur.jpg">
+        <figcaption>Hadrosaur</figcaption>
+      </figure>
+    </div>
+    <div class="unit">
+      <figure>
+        <img class="img-flex" src="images/iguanodon.jpg">
+        <figcaption>Iguanodon</figcaption>
+      </figure>
+    </div>
+    <div class="unit">
+      <figure>
+        <img class="img-flex" src="images/stegosaurus.jpg">
+        <figcaption>Stegosaurus</figcaption>
+      </figure>
+    </div>
+  </div>
 
 </body>
 </html>
