--- a/index.html
+++ b/index.html
@@ -9,25 +9,25 @@
 </head>
 <body>
   <div class="grid">
-    <div class="unit">
+    <div class="unit xs-1 s-1-2 m-1-2 l-1-4">
       <figure>
         <img class="img-flex" src="images/diplodocus.jpg">
         <figcaption>Diplodocus</figcaption>
       </figure>
     </div>
-    <div class="unit">
+    <div class="unit xs-1 s-1-2 m-1-2 l-1-4">
       <figure>
         <img class="img-flex" src="images/hadrosaur.jpg">
         <figcaption>Hadrosaur</figcaption>
       </figure>
     </div>
-    <div class="unit">
+    <div class="unit xs-1 s-1-2 m-1-2 l-1-4">
       <figure>
         <img class="img-flex" src="images/iguanodon.jpg">
         <figcaption>Iguanodon</figcaption>
       </figure>
     </div>
-    <div class="unit">
+    <div class="unit xs-1 m-1-2 l-1-4">
       <figure>
         <img class="img-flex" src="images/stegosaurus.jpg">
         <figcaption>Stegosaurus</figcaption>
